update build method

--- a/SharpGPOAbuse/packages.config
+++ b/SharpGPOAbuse/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.3.15" targetFramework="net35" />
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net35" />
+  <package id="Fody" version="6.3.0" targetFramework="net35" developmentDependency="true" />
 </packages>
